--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,12 +10,15 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="quote-container" id="quote-container">
         <!-- Quote element -->
         <div class="quote-text">
             <i class="fas fa-quote-left"></i>
-            <span id="quote">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus nostrum quo esse voluptatibus iste dicta perspiciatis tempore minus ad magnam molestiae, numquam repellat aspernatur illum ratione, voluptas fuga explicabo corporis.</span>
+            <span id="quote">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus nostrum quo esse
+                voluptatibus iste dicta perspiciatis tempore minus ad magnam molestiae, numquam repellat aspernatur
+                illum ratione, voluptas fuga explicabo corporis.</span>
         </div>
         <!-- Author -->
         <div class="quote-author">
@@ -23,7 +27,7 @@
         <!-- Buttons -->
         <div class="button-container">
             <button class="twitter-button" id="twitter" title="Tweet This!">
-                <i class="fab fa-twitter"></i> 
+                <i class="fab fa-twitter"></i>
             </button>
             <button class="new-quote">New Quote</button>
         </div>
@@ -31,4 +35,5 @@
     <!-- Scripts -->
     <script src="script.js"></script>
 </body>
+
 </html>
