--- a/index.html
+++ b/index.html
@@ -16,20 +16,18 @@
         <!-- Quote element -->
         <div class="quote-text">
             <i class="fas fa-quote-left"></i>
-            <span id="quote">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus nostrum quo esse
-                voluptatibus iste dicta perspiciatis tempore minus ad magnam molestiae, numquam repellat aspernatur
-                illum ratione, voluptas fuga explicabo corporis.</span>
+            <span id="quote"></span>
         </div>
         <!-- Author -->
         <div class="quote-author">
-            <span id="author">The Dodson</span>
+            <span id="author"></span>
         </div>
         <!-- Buttons -->
         <div class="button-container">
             <button class="twitter-button" id="twitter" title="Tweet This!">
                 <i class="fab fa-twitter"></i>
             </button>
-            <button class="new-quote">New Quote</button>
+            <button id="new-quote">New Quote</button>
         </div>
     </div>
     <!-- Scripts -->
