--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
             <button id="new-quote">New Quote</button>
         </div>
     </div>
+    <!-- Loader -->
+    <div class="loader" id="loader"></div>
     <!-- Scripts -->
     <script src="script.js"></script>
 </body>
